fix: search in publication-builder branch - fixes https://github.com/eclipse/che/issues/21498

--- a/supplemental-ui/partials/header-content.hbs
+++ b/supplemental-ui/partials/header-content.hbs
@@ -13,9 +13,9 @@
     </div>
     <div id="topbar-nav" class="navbar-menu">
       <div class="navbar-end">
-        <div class="navbar-item hide-for-print">
+        <div class="navbar-item search hide-for-print">
           <div id="search-field" class="field">
-            <input id="search-input" type="text" placeholder="Search the docs" autofocus>
+            <input id="search-input" type="text" placeholder="Search the docs"{{#if page.home}} autofocus{{/if}}>
           </div>
         </div>
         <a class="navbar-item" href="https://www.eclipse.org/che/">Home</a>
